# clippy

./: Cargo.toml  README.md  build.rs  install.sh  resources.gresource.xml  uninstall.sh
clippy-daemon/: Cargo.toml
clippy-daemon/src/: dbus.rs  main.rs
clippy-db/: Cargo.toml
clippy-db/src/: lib.rs  models.rs
clippy-ui/: Cargo.toml  build.rs  resources.gresource.xml
clippy-ui/src/: dbus_client.rs  main.rs
clippy-ui/src/ui/: entry_row.rs  mod.rs  search_bar.rs  window.rs
clippy-ui/src/ui/resources/: style.css
extension/: extension.js  metadata.json
src/: db.rs  dbus.rs  main.rs  paste.rs
src/ui/: entry_row.rs  mod.rs  window.rs
