[package]
name = "clippy"
version = "0.1.0"
edition = "2024"

#[dependencies]
#gtk4 = { version = "0.11.1", features = ["v4_12"] }
#rusqlite = { version = "0.31", features = ["bundled"] }
#directories = "5"
#
#futures-util = "0.3.32"
#tokio = { version = "1", features = ["full"] }
#glib = "0.20"
#ashpd = "0.9"

[dependencies]
gtk4 = { version = "0.11.1", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_4"] }
glib = "0.22.3"
gdk4 = { version = "0.11.1", package = "gdk4" }
gdk-pixbuf = "0.20"
gio = "0.22.2"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5"

# Wayland clipboard
wl-clipboard-rs = "0.9.3"

# Portal / hotkeys / D-Bus
#ashpd = { version = "0.13.7", features = ["gtk4", "remote_desktop"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Image handling
image = "0.25"

# Config serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

[build-dependencies]
glib-build-tools = "0.22.0"