[workspace]
members = [
    "clippy-daemon",
    "clippy-ui",
    "clippy-db"
]
resolver = "3"

[workspace.metadata]
default-run = "clippy-ui"

[workspace.dependencies]
gtk4 = { version = "0.11.1", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_4"] }
glib = "0.22.3"
gdk4 = { version = "0.11.1", package = "gdk4" }
gdk-pixbuf = "0.22"
gio = "0.22.2"
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5"
wl-clipboard-rs = "0.9.3"
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
glib-build-tools = "0.22.0"
url = "2.5.8"