[package]
name = "clippy-ui"
version = "0.1.0"
edition = "2024"
[dependencies]
clippy-db = { path = "../clippy-db" }
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gdk4.workspace = true
gdk-pixbuf.workspace = true
gio.workspace = true
wl-clipboard-rs.workspace = true
zbus.workspace = true
tokio.workspace = true
serde_json.workspace = true
log.workspace = true
[build-dependencies]
glib-build-tools.workspace = true
